--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,48 @@
 @import url('alpha.css');
-
+*{
+    padding: 0;
+    margin: 0;
+}
 body{
     background: var(--main-color);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/* 
+menu
+*/
+.menu {
+    position: absolute;
+    background: #0000006e;
+    width: 100%;
+    top: 0px;
+    height: 100vh;
+    z-index: 200;
+}
+.toggole {
+    display: flex!important;
+    align-items: center;
+    justify-content: center;
+}
+.menu .menucenter {
+    border-radius: 30px;
+    border: 3px solid #ffffff10;
+    background: #bbbaba1c;
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px); 
+    padding: 100px;
+}
+.menu .closebutton img{
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    width: 30px!important;
+}
+.menu .menucenter img{
+    width: 200px;
+}
+.menu .menucenter img:hover{
+    cursor: pointer;
+    filter: blur(2px);
 }
 
 /*
@@ -26,15 +66,7 @@ body{
     transition: 0.1s ease-in-out ;
 }
 .button:hover {
-    margin-left: -20px;
     cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.39);
 }
 
 .header .icon img{
@@ -50,6 +82,9 @@ body{
     width: 43px;
     height: 30px;
     position: relative;
+}
+.raise {
+    z-index: 1;
 }
 .header .themeButton .themeIcon .left {
     position: absolute;
@@ -75,9 +110,14 @@ body{
     background: #353535;
     width: 15px;
     height: 15px;
-    z-index: 1;
+    z-index: 2;
     top: 8px;
     right: 5px;
+    transition: 0.5s ease-in-out;
+}
+.move {
+    left:5px!important;
+    background: #ffffff!important;
 }
 
 /* middle section: chart area / chart box */
@@ -109,6 +149,7 @@ body{
     font-weight: bold;
 }
 .freebuttonimage img{
+    margin-top: 30px;
     width: 150px;
 }
 .freebutton .align{
@@ -123,6 +164,16 @@ body{
 
 /* mobile responsiveness */
 @media (max-width: 835px){
+    .menu .menucenter {
+        border-radius: unset;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        padding: 0px!important;
+    }
     .header .logo img{
         display: none;
     }
@@ -146,5 +197,9 @@ body{
     }
     .mobileChart img {
         width: 80%;
+    }
+    .menu .closebutton img{
+        position: unset!important;
+        margin-bottom: 50px;
     }
 }
