--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
     margin: 0;
 }
 body{
+    overflow-x: hidden;
     background: var(--main-color);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -193,7 +194,7 @@ menu
 /* 
     CALL TO ACTION: ceter section ...
 */
-.actionTitle {
+.SubHeader {
     margin-top: 50px;
 }
 .banners {
@@ -226,7 +227,55 @@ menu
     font-weight: bold;
 
 }
+/* video downloader and media player */
+
+.lessonsContainer {
+    width: 70vw;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.freeLessons .lessonheader {
+    margin-bottom: 40px;
+}
+.lessonsContainer .lesson {
+    width: 500px;
+    height: 300px;
+    border-radius: 15px;
+}
+.lessonsContainer .lesson .caption {
+    position: absolute;
+    
+}
+.lessonsContainer .lesson .video {
+    width: 100%;
+    height: 100%;
+}
+.lessonsContainer .lesson .video iframe{
+    border:2px solid var(--text-color);
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+}
 /* mobile responsiveness */
+@media (max-width: 548px){
+    .lessonsContainer{
+        gap: -10px!important;
+    }
+}
+@media (max-width:548px){ 
+    .lessonsContainer .lesson {
+        width: 100%!important;
+        height: 300px;
+    }
+    .lessonsContainer {
+        width: 85vw;
+    }
+}
 @media (max-width: 835px){
     .header{
         width: 80%!important;
