--- a/css/blog.css
+++ b/css/blog.css
@@ -49,13 +49,156 @@ a {
     margin-left: 20px;
     margin-bottom: 5px;
 }
-
-
+.blogContainer {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    width: 60%;
+    height: 50px;
+    margin-top: 20px;
+}
+.blogContainer .blog {
+    position: relative;
+    background: #030611;
+    width: 300px;
+    height: 350px;
+    border-radius: 20px;
+}
+.imageContainer{
+    border: .5px solid #505050;
+    background: #505050;
+    background-size:cover;
+    background-repeat: no-repeat;
+    width: 95%;
+    margin: auto;
+    margin-top: 10px!important;
+    border-radius: 15px;
+    height: 130px;
+}
+.one {
+    background-image: url('../assets/blog/Background1.png');
+}
+.two {
+    background-image: url('../assets/blog/Background.png');
+}
+.imageContainer .credit {
+    background: #030611;
+    width: fit-content;
+    color: var(--text-color);
+    font-size: 12px;
+    padding: 5px;
+    border-radius: 10px;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+.blogContainer .blog .blogtitle {
+    width: 95%;
+    margin: auto;
+    margin-top: 10px;
+    color: var(--text-color);
+    font-size: 12px;
+    font-weight: light!important;
+}
+.blogContainer .blog .catpion {
+    margin: auto;
+    margin-top: 5px;
+    color: var(--text-color);
+    width: 95%;
+}
+.blogContainer .bottomsec {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    bottom: 10px;
+    width: 95%;
+}
+.blogContainer .bottomsec .socials {
+    display: flex;
+    gap: 10px;
+}
+.blogContainer .bottomsec .socials div {
+    border-radius: 100px;
+    background: #4444446e;
+    width: 30px;
+    height: 30px;
+    transition: 0.1s ease-in-out ;
+}
+.blogContainer .bottomsec .socials div:hover {
+    background-color: unset!important;
+    box-shadow: 0px 0px 10px 0px #02d9ff80;
+    cursor: pointer;
+    opacity: 80%;
+}
+.blogContainer .bottomsec .facebook {
+    background-image: url('../assets/icons/facebook.png')!important;
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+}
+.blogContainer .bottomsec .twitter {
+    background-image: url('../assets/icons/twitteer.png')!important;
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+}
+.blogContainer .bottomsec .youtube {
+    background-image: url('../assets/icons/yt.png')!important;
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+}
+.blogContainer .bottomsec .BlogMoreButton {
+    background-size: cover;
+    width: 80px;
+    height: 30px;
+}
+.blogContainer .bottomsec .BlogMoreButton img {
+    width: 110px;
+    margin-top: -20px;
+    margin-left: -14px;
+    transition: all ease-in-out 0.1s;
+}
+.blogContainer .bottomsec .BlogMoreButton img:hover {
+    width: 120px;
+    margin-top: -25px;
+    margin-left: -20px;
+    cursor: pointer;
+    opacity: 50%;
+}
 @media (max-width: 835px) {
     .header .logo img{
         display: block!important;
     }
     .Topictitle {
         width: 80%;
+    }
+}
+
+@media (max-width: 1048px){
+    .header {
+        width: 70%;
+    }
+    .Topictitle {
+        width: 70%;
+    }
+    .blogContainer {
+        height: fit-content;
+        width: 70%;
+    }
+}
+@media (max-width: 904px) {
+    .header {
+        width: 80%;
+    }
+    .Topictitle {
+        width: 80%;
+    }
+    .blogContainer {
+        width: 80%;
+    }
+}
+@media (max-width: 794px) {
+    .blogContainer{
+        justify-content: center;
     }
 }
