--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,40 @@ menu
     width: 100%;
     height: 100%;
 }
+footer {
+    color: #fff!important;
+    padding-top: 30px;
+    margin-top: 100px;
+    padding-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: #030611;
+    width: 100vw;
+    height: fit-content;
+}
+footer .footHead {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+footer .footHead p {
+    color:var(--text-color);
+    width: 300px;
+    margin-top: -3px;
+    align-items: center;
+    font-size: 17px;
+}
+
+footer img {
+    width: 109px;
+}
+
 /* mobile responsiveness */
 /* 422 */
 @media (max-width:425px) {
@@ -289,6 +323,9 @@ menu
         gap: 169px!important;
         width: 85vw;
         justify-content: center!important;
+    }
+    .footer .footHead p  {
+        text-align: center!important;
     }
 }
 @media (max-width: 835px){
